--- a/src/index.ejs
+++ b/src/index.ejs
@@ -294,8 +294,8 @@
 			Your browser does not support the audio element.
 		</audio>
 		<ul id="playlist">
-			<li data-src="assets/audio/sandoval.ogg"></li>
-			<li data-src="assets/audio/maria.ogg"></li>
+			<li data-src="assets/audio/breezin.ogg"></li>
+			<li data-src="assets/audio/martin.ogg"></li>
 		</ul>
 
 		<% if(htmlWebpackPlugin.options.options.env === 'production'){ %>
