--- a/src/index.ejs
+++ b/src/index.ejs
@@ -283,14 +283,14 @@
 			</div>
 		</div>
 
-		<iframe
+		<!-- <iframe
 			id="audio"
 			src="assets/audio/silence.ogg"
 			allow="autoplay"
 			style="display:none"
-		></iframe>
+		></iframe> -->
 		<audio id="player">
-			<source id="player-src" src="assets/audio/martin.ogg" type="audio/ogg" />
+			<source id="player-src" src="assets/audio/martin.ogg" type="audio/ogg" autoplay/>
 			Your browser does not support the audio element.
 		</audio>
 		<ul id="playlist">
