--- a/src/index.ejs
+++ b/src/index.ejs
@@ -290,7 +290,7 @@
 			style="display:none"
 		></iframe> -->
 		<audio id="player">
-			<source id="player-src" src="assets/audio/martin.ogg" type="audio/ogg" autoplay/>
+			<source id="player-src" src="assets/audio/martin.ogg" type="audio/ogg"/>
 			Your browser does not support the audio element.
 		</audio>
 		<ul id="playlist">
