--- a/src/index.ejs
+++ b/src/index.ejs
@@ -300,6 +300,10 @@
 
 		<% if(htmlWebpackPlugin.options.options.env === 'production'){ %>
 		<script>
+			window.onload=function(){
+    			document.getElementById("player").play();
+  			}
+
 			// Check that service workers are registered
 			if ('serviceWorker' in navigator) {
 				// Use the window load event to keep the page load performant
