--- a/src/index.ejs
+++ b/src/index.ejs
@@ -49,7 +49,7 @@
 		<title>Have a fun day!</title>
 	</head>
 	<body>
-		<button id="hello">audio</button>
+		<button id="hello">turn audio on</button>
 
 		<style>
 			@font-face {
