--- a/src/index.ejs
+++ b/src/index.ejs
@@ -296,7 +296,7 @@
 			Your browser does not support the audio element.
 		</audio>
 		<ul id="playlist">
-			<li data-src="assets/audio/breezin.ogg"></li>
+			<!-- <li data-src="assets/audio/breezin.ogg"></li> -->
 			<li data-src="assets/audio/martin.ogg"></li>
 		</ul>
 
