--- a/src/index.ejs
+++ b/src/index.ejs
@@ -308,7 +308,11 @@
     		// rollSound.play());
   			// }
 
-  			const rollSound = new Audio("assets/audio/martin.ogg");
+			
+  			// const rollSound = new Audio("assets/audio/martin.ogg");
+  			let arr = ["assets/audio/martin.ogg", "assets/audio/leanon.ogg", "assets/audio/party.ogg"];
+  			const rollSound = new Audio(arr[(Math.floor(Math.random() * arr.length))]);
+
     		document.getElementById('hello').addEventListener("click", e => 
     		rollSound.play());
 
