--- a/src/index.ejs
+++ b/src/index.ejs
@@ -310,7 +310,7 @@
 
 			
   			// const rollSound = new Audio("assets/audio/martin.ogg");
-  			let arr = ["assets/audio/martin.ogg", "assets/audio/leanon.ogg", "assets/audio/party.ogg"];
+  			let arr = ["assets/audio/martin.ogg", "assets/audio/leanon.mp3"];
   			const rollSound = new Audio(arr[(Math.floor(Math.random() * arr.length))]);
 
     		document.getElementById('hello').addEventListener("click", e => 
